# pycount_MSRS

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_MSRS/: __init__.py
tests/: einstein_test.py  test_pycounts_MSRS.py
