[tool.poetry]
name = "pycounts_MSRS"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Md Shahriar Rahim Siddiqui"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

readme = "README.md"
homepage = "https://github.com/nafi007/pycounts_MSRS"
repository = "https://github.com/nafi007/pycounts_MSRS"
documentation = 'https://pycounts_MSRS.readthedocs.io'